# genepy

./: README.md  examples.py  pyproject.toml
genepy/: examples.py  genepy.py
tutorial/: tutorial.ipynb
